syntax = "proto3";

package rivet.backend.pkg.mm.lobby_for_run_id;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid run_ids = 1;
}

message Response {
	message Lobby {
		rivet.common.Uuid lobby_id = 1;
		rivet.common.Uuid run_id = 2;
	}

	repeated Lobby lobbies = 1;
}
